--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -26,7 +26,7 @@
   margin-bottom: 1em;
   
   a {
-    font-weight: 500;
+    font-weight: 400;
     text-decoration: none;
     &:hover { text-decoration: underline; }
   }
