--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -48,7 +48,7 @@
   color: var(--color-subtext);
   margin-bottom: 0.35em;
   letter-spacing: 0.01em;
-  font-weight: 500;
+  font-weight: 400;
 }
 .recent-note-title {
   font-size: 1.05em;
